--- a/index.html
+++ b/index.html
@@ -12,32 +12,36 @@
   <link href="https://fonts.googleapis.com/css2?family=Markazi+Text&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
-  <header class="section sec1 header active">
+  <header class="section sec1 header active" id="home">
   </header>
   <main>
-    <section class="section sec2 about"></section>
-    <section class="section sec3 portfolio"></section>
-    <section class="section sec4 blogs"></section>
-    <section class="section sec5 contact"></section>
+    <section class="section sec2 about" id="about"></section>
+    <section class="section sec3 research" id="research"></section>
+    <section class="section sec4 portfolio" id="portfolio"></section>
+    <section class="section sec5 blogs" id="blogs"></section>
+    <section class="section sec6 contact" id="contact"></section>
   </main>
 
   <div class="controls">
-    <div class="control control-1 active-btn"> 
+    <div class="control control-1 active-btn" data-id="home"> 
       <i class="fas fa-home"></i>
     </div>
-    <div class="control control-2">
+    <div class="control control-2" data-id="about">
       <i class="fas fa-user"></i>
     </div>
-    <div class="control control-3">
+    <div class="control control-2" data-id="research">
+      <i class="fas fa-book"></i>
+    </div>
+    <div class="control control-3" data-id="portfolio">
       <i class="fas fa-briefcase"></i>
     </div>
-    <div class="control control-4">
+    <div class="control control-4" data-id="blogs">
       <i class="fas fa-newspaper"></i>
     </div>
-    <div class="control control-5 ">
+    <div class="control control-5" data-id="contact">
       <i class="fas fa-envelope-open "></i>
     </div>
   </div>
-  <script src="app.js"></script>
 </body>
+<script src="app.js"></script>
 </html>
