--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
 </head>
 <body class="main-content">
   <header class="section sec1 header active" id="home">
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image">
+            <img src="img/me.png" alt="">
+          </div>
+        </div>
+        <div class="right-header">
+          <h1 class="name">
+            Hi, I'm <span class="name">Boyoon Chang.</span> An economist.
+          </h1>
+          <p>
+            I'm an economist, I love to do quantitative analysis. Also I enjoy learning new programming languages and creating web applications during my spare time. 
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Officia, libero?
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Officia, libero?
+          </p>
+          <a href="" class="main-btn">
+            <span class="btn-text">Download CV</span>
+            <span class="btn-icon"><i class="fas fa-download"></i></span>
+          </a>
+        </div> 
+      </div>
   </header>
   <main>
     <section class="section sec2 about" id="about"></section>
