replace button icons with text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://fonts.googleapis.com/css2?family=Markazi+Text&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
   <header class="section sec1 header active" id="home">
@@ -46,19 +46,19 @@
 
   <div class="controls">
     <div class="control control-1 active-btn" data-id="home"> 
-      <i class="fas fa-home"></i>
+      <span>home</span>
     </div>
     <div class="control control-2" data-id="about">
-      <i class="fas fa-user"></i>
+      <span>about</span>
     </div>
     <div class="control control-2" data-id="research">
-      <i class="fas fa-book"></i>
+      <span>research</span>
     </div>
     <div class="control control-3" data-id="portfolio">
-      <i class="fas fa-briefcase"></i>
+      <span>portfolio</span>
     </div>
     <div class="control control-4" data-id="blogs">
-      <i class="fas fa-newspaper"></i>
+      <span>blogs</span>
     </div>
     <div class="control control-5" data-id="contact">
       <i class="fas fa-envelope-open "></i>
