change background color

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 
   <div class="controls">
     <div class="control control-1 active-btn" data-id="home"> 
-      <span>home</span>
+      <i class="no-italics">home</i>
     </div>
     <div class="control control-2" data-id="about">
-      <span>about</span>
+      <i class="no-italics">about</i>
     </div>
     <div class="control control-2" data-id="research">
-      <span>research</span>
+      <i class="no-italics">research</i>
     </div>
     <div class="control control-3" data-id="portfolio">
-      <span>portfolio</span>
+      <i class="no-italics">portfolio</i>
     </div>
     <div class="control control-4" data-id="blogs">
-      <span>blogs</span>
+      <i class="no-italics">blogs</i>
     </div>
     <div class="control control-5" data-id="contact">
       <i class="fas fa-envelope-open "></i>
