update teaching page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
   <main>
     <section class="section sec2 about" id="about"></section>
     <section class="section sec3 research" id="research"></section>
-    <section class="section sec4 portfolio" id="portfolio"></section>
-    <section class="section sec5 blogs" id="blogs"></section>
-    <section class="section sec6 contact" id="contact"></section>
+    <section class="section sec4 teaching" id="teaching"></section>
+    <section class="section sec5 portfolio" id="portfolio"></section>
+    <section class="section sec6 blogs" id="blogs"></section>
+    <section class="section sec7 contact" id="contact"></section>
   </main>
 
   <div class="controls">
@@ -48,16 +49,19 @@
     <div class="control control-2" data-id="about">
       <i class="no-italics">about</i>
     </div>
-    <div class="control control-2" data-id="research">
+    <div class="control control-3" data-id="research">
       <i class="no-italics">research</i>
     </div>
-    <div class="control control-3" data-id="portfolio">
+    <div class="control control-4" data-id="teaching">
+      <i class="no-italics">teaching</i>
+    </div>
+    <div class="control control-5" data-id="portfolio">
       <i class="no-italics">portfolio</i>
     </div>
-    <div class="control control-4" data-id="blogs">
+    <div class="control control-6" data-id="blogs">
       <i class="no-italics">blogs</i>
     </div>
-    <div class="control control-5" data-id="contact">
+    <div class="control control-7" data-id="contact">
       <i class="fas fa-envelope-open "></i>
     </div>
   </div>
