attempt to link about page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <i class="no-italics">home</i>
     </div>
     <div class="control control-2" data-id="about">
-      <i class="no-italics">about</i>
+      <i class="no-italics" href="about/index.html">about</i>
     </div>
     <div class="control control-3" data-id="research">
       <i class="no-italics">research</i>
