add previous website's link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <span class="btn-text">Download CV</span>
             <span class="btn-icon"><i class="fas fa-download"></i></span>
           </a>
+          <p style="margin:10px">This is a work-in-progress website. Check out the previous version of my website, <a href="https://bchang1.netlify.app"> HERE<i class="fas fa-link"></i> </a></p>
         </div> 
       </div>
   </header>
