--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
         </div>
         <div class="right-header">
           <h1 class="name">
-            Hi, I'm <span class="name">Boyoon Chang.</span> An economist.
+            Hi, I'm <span class="name">Boyoon Chang.</span> <br> An economist.
           </h1>
           <p>
-            I'm an economist, I love to do quantitative analysis. Also I enjoy learning new programming languages and creating web applications during my spare time. 
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Officia, libero?
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Officia, libero?
+            I am an economist, I love to do quantitative analysis. Also I enjoy learning new programming languages and creating web applications during my spare time. 
           </p>
-          <a href="" class="main-btn">
-            <span class="btn-text">Download CV</span>
-            <span class="btn-icon"><i class="fas fa-download"></i></span>
-          </a>
-          <p style="margin:10px">This is a work-in-progress website. Check out the previous version of my website, <a href="https://bchang1.netlify.app"> HERE<i class="fas fa-link"></i> </a></p>
+          <div class="btn-con">
+            <a href="" class="main-btn">
+              <span class="btn-text">Download CV</span>
+              <span class="btn-icon"><i class="fas fa-download"></i></span>
+            </a>
+          </div>
+          <p>This is a work-in-progress website. Check out the previous version of my website, <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a></p>
         </div> 
       </div>
   </header>
   <main>
-    <section class="section sec2 about" id="about"></section>
+    <section class="section sec2 about" id="about">
+      <div class="main-title">
+        <h2>About <span>me</span></h2>
+      </div>
+    </section>
     <section class="section sec3 research" id="research"></section>
     <section class="section sec4 teaching" id="teaching"></section>
     <section class="section sec5 portfolio" id="portfolio"></section>
