add header for each page

--- a/index.html
+++ b/index.html
@@ -40,11 +40,21 @@
         <h2>About <span>me</span></h2>
       </div>
     </section>
-    <section class="section sec3 research" id="research"></section>
-    <section class="section sec4 teaching" id="teaching"></section>
-    <section class="section sec5 portfolio" id="portfolio"></section>
-    <section class="section sec6 blogs" id="blogs"></section>
-    <section class="section sec7 contact" id="contact"></section>
+    <section class="section sec3 research" id="research">
+      <h1>Research</h1>
+    </section>
+    <section class="section sec4 teaching" id="teaching">
+      <h1>Teaching</h1>
+    </section>
+    <section class="section sec5 portfolio" id="portfolio">
+      <h1>Portfolio</h1>
+    </section>
+    <section class="section sec6 blogs" id="blogs">
+      <h1>Blogs</h1>
+    </section>
+    <section class="section sec7 contact" id="contact">
+      <h1>Contacts</h1>
+    </section>
   </main>
 
   <div class="controls">
