--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Hi, I'm <span class="name">Boyoon Chang.</span> <br> An economist.
           </h1>
           <p>
-            I am an economist, I love to do quantitative analysis. Also I enjoy learning new programming languages and creating web applications during my spare time. 
+            I am an economist. I love to do quantitative analysis. I enjoy learning new programming languages and creating web applications during my spare time. 
           </p>
           <div class="btn-con">
             <a href="" class="main-btn">
@@ -30,7 +30,11 @@
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
           </div>
-          <p>This is a work-in-progress website. Check out the previous version of my website, <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a></p>
+          <p>This is a work-in-progress website. Check out the previous version of my website,</p>
+          <div class="btn-con">
+            <a href="https://bchang1.netlify.app" class="main-btn"> <span class="btn-text"> HERE </span> 
+            <span class="main-btn btn-icon"><i class="fas fa-link"></i> </span>
+          </a>
         </div> 
       </div>
   </header>
