--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
+            
           </div>
-          <p>This is a work-in-progress website. Check out the previous version of my website,</p>
-          <div class="btn-con">
-            <a href="https://bchang1.netlify.app" class="main-btn"> <span class="btn-text"> HERE </span> 
-            <span class="main-btn btn-icon"><i class="fas fa-link"></i> </span>
-          </a>
-        </div> 
+          <p>This is a work-in-progress website. Check out the previous version of my website,
+            <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> 
+          </a></p>
       </div>
   </header>
   <main>
