--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
-            
           </div>
           <p>This is a work-in-progress website. Check out the previous version of my website,
             <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> 
@@ -40,6 +39,46 @@
     <section class="section sec2 about" id="about">
       <div class="main-title">
         <h2>About <span>me</span></h2>
+      </div>
+      <div class="about-container">
+        <div class="left-about">
+            <h4>Information about me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, vero eos vel nemo eius voluptatem dicta tenetur modi.
+
+            La musica delectus dolore fugiat exercitationem a, ipsum quidem quo enim natus accusamus labore dolores nam. Unde. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum non necessitatibus deleniti eum soluta.</p>
+            <div class="btn-con">
+              <a href="" class="main-btn">
+                <span class="btn-text">Download CV</span>
+                <span class="btn-icon"><i class="fas fa-download"></i></span>
+              </a>
+            </div>
+        </div>
+        <div class="right-about">
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="section sec3 research" id="research">
