--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         </div>
         <div class="right-header">
           <h1 class="name">
-            Hi, I'm <span class="name">Boyoon Chang.</span> <br> An economist.
+            Hi, I'm <span class="name">Boyoon Chang.<br> An economist.</span> 
           </h1>
           <p>
-            I am an economist. I love to do quantitative analysis. I enjoy learning new programming languages and creating web applications during my spare time. 
+            I am an economist. <br> I love to do quantitative analysis.<br>I enjoy learning new programming languages and creating web applications during my spare time. <br>
+            This is a work-in-progress website. Check out the previous version of my website,  <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a>
           </p>
           <div class="btn-con">
             <a href="" class="main-btn">
@@ -30,9 +31,7 @@
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
           </div>
-          <p>This is a work-in-progress website. Check out the previous version of my website,
-            <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> 
-          </a></p>
+
       </div>
   </header>
   <main>
