--- a/index.html
+++ b/index.html
@@ -27,8 +27,18 @@
           </p>
           <div class="btn-con">
             <a href="" class="main-btn">
-              <span class="btn-text">Download CV</span>
-              <span class="btn-icon"><i class="fas fa-download"></i></span>
+              <span class="btn-icon">
+                <i class="fas fa-file-download fa-2x" title="click here"></i>
+            </span>
+            </a>
+            <a href="https://github.com/BoyoonChang", class="main-btn">
+              <span class="btn-icon"><i class="fab fa-github-alt fa-2x"></i></span>
+            </a>
+            <a href="https://www.linkedin.com/in/boyoon-chang", class="main-btn">
+              <span class="btn-icon"><i class="fab fa-linkedin fa-2x"></i></span>
+            </a>
+            <a href="mailto:bchang@uoregon.edu", class="main-btn">
+              <span class="btn-icon"><i class="fa fa-envelope fa-2x"></i></span>
             </a>
           </div>
 
