--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             This is a work-in-progress website. Check out the previous version of my website,  <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a>
           </p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <a href="https://www.dropbox.com/s/u7fcuhda9l3eb3y/Chang_CV.pdf?dl=0" class="main-btn">
               <span class="btn-icon">
                 <i class="fas fa-file-download fa-2x" title="click here"></i>
             </span>
