--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Bo</title>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,17 +28,21 @@
           <div class="btn-con">
             <a href="https://www.dropbox.com/s/u7fcuhda9l3eb3y/Chang_CV.pdf?dl=0" class="main-btn">
               <span class="btn-icon">
-                <i class="fas fa-file-download fa-2x" title="click here"></i>
+                <i class="fas fa-file-download fa-2x" title="My CV"></i>
             </span>
             </a>
             <a href="https://github.com/BoyoonChang", class="main-btn">
-              <span class="btn-icon"><i class="fab fa-github-alt fa-2x"></i></span>
+              <span class="btn-icon">
+                <i class="fab fa-github-alt fa-2x"
+                title="My Github">
+                </i></span>
             </a>
             <a href="https://www.linkedin.com/in/boyoon-chang", class="main-btn">
-              <span class="btn-icon"><i class="fab fa-linkedin fa-2x"></i></span>
+              <span class="btn-icon">
+                <i class="fab fa-linkedin fa-2x" title="My LinkedIn"></i></span>
             </a>
             <a href="mailto:bchang@uoregon.edu", class="main-btn">
-              <span class="btn-icon"><i class="fa fa-envelope fa-2x"></i></span>
+              <span class="btn-icon"><i class="fa fa-envelope fa-2x"  title="My Email"></i></span>
             </a>
           </div>
 
