--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Yrsa&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
   <header class="section sec1 header active" id="home">
@@ -23,8 +23,8 @@
             Hi, I'm <span class="name">Boyoon Chang.<br> An economist.</span> 
           </h1>
           <p>
-            I am an economist. <br> I love to do quantitative analysis.<br>I enjoy learning new programming languages and creating web applications during my spare time. <br>
-            This is a work-in-progress website. Check out the previous version of my website,  <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a>
+            I am pursuing Ph.D. in Economics at the University of Oregon. My main fields of interest are empirical industrial organization, microeconometrics, and microeconomics. Some of my work revolve around exploring platform economy and analyzing the effect of competition policy.<br> <br>  During my spare time, I love exploring new programming languages and creating web applications. See here for the web apps that I have created.  <br><br>
+            This is a work-in-progress website. Check out the previous version of my website,  <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a> that contains more complete information about me. 
           </p>
           <div class="btn-con">
             <a href="https://www.dropbox.com/s/u7fcuhda9l3eb3y/Chang_CV.pdf?dl=0" class="main-btn">
