change front page content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Hi, I'm <span class="name">Boyoon Chang.<br> An economist.</span> 
           </h1>
           <p>
-            I am pursuing Ph.D. in Economics at the University of Oregon. My main fields of interest are empirical industrial organization, microeconometrics, and microeconomics. Some of my work revolve around exploring platform economy and analyzing the effect of competition policy.<br> <br>  During my spare time, I love exploring new programming languages and creating web applications. See here for the web apps that I have created.  <br><br>
+            I am pursuing Ph.D. in Economics at the University of Oregon. My main fields of interest are empirical industrial organization, microeconometrics, and microeconomics. Some of my work revolve around exploring platform economy and analyzing the effect of competition policy. During my spare time, I love exploring new programming languages and creating web applications. See <a href="https://readuck.herokuapp.com/">HERE <i class="fas fa-link"></i> </a> for one of the web apps that I have created.  <br><br>
             This is a work-in-progress website. Check out the previous version of my website,  <a href="https://bchang1.netlify.app"> HERE <i class="fas fa-link"></i> </a> that contains more complete information about me. 
           </p>
           <div class="btn-con">
