fun project link update

--- a/index.html
+++ b/index.html
@@ -102,7 +102,43 @@
       <h1>Teaching</h1>
     </section>
     <section class="section sec5 portfolio" id="portfolio">
-      <h1>Portfolio</h1>
+      <div class="main-title">
+        <h2>Portfolio</h2>
+      </div>
+      <div class="about-container">
+        <div class="left-about">
+
+        </div>
+        <div class="right-about">
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="medium-text">
+                <a href="https://boyoonchang.github.io/fun_projects/">Fun projects</a>
+              </p>
+              <p class="med-small-text">Description</p>
+            </div>
+          </div>
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+          <div class="about-item">
+            <div class="abt-text">
+              <p class="large-text">2+</p>
+              <p class="small-text">Projects <br/> Completed</p>
+            </div>
+          </div>
+        </div>
+    </div>
+
     </section>
     <section class="section sec6 blogs" id="blogs">
       <h1>Blogs</h1>
