--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
           </div>
         </div>
       </div>
+      <h4 class="stat-title">My Timeline</h4>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="tl-icon">
+            <i class="fas fa-briefcase"></i>
+          </div>
+          <p class="tl-duration">2010-present</p>
+          <h5>Web Developer<span>-Bosoft</span></h5>
+        </div>
+      </div>
     </section>
     <section class="section sec3 research" id="research">
       <h1>Research</h1>
